--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="col-sm-1"></div>
                 <div class="col-sm-7">
                     <div class="content text-white py-4 mt-4">
-                        <p1>Welcome<br> to the <br><span style="font-size: 55px; color: aquamarine;">Literature
+                        <p1>Welcome to the <br><span style="font-size: 55px; color: aquamarine;">Literature
                             </span><span style="font-size: 55px; color: tomato;"> Carnival!</span> </p1><br><br>
                         <p2 style="color: burlywood; font-size: 20px;">The most fun carnival event ever!!!</p2><br><br>
                         <a href="registration.html"><button class="register">Register NOW
