Remove text from registration link
Removed text from the registration link in the navigation.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                         <a href="events.html" class="btn nav-btn">Events</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="registration.html" class="btn nav-btn">Registration</a>
+                                        <a href="registration.html" class="btn nav-btn"></a>
                                     </li>
                                 </ul>
                             </div>
