changes to the home page

--- a/index.html
+++ b/index.html
@@ -29,11 +29,6 @@
                     <nav class="navbar navbar-expand-lg navbar-dark " style="border-radius: 10px;">
                         <div class="container-fluid mt-2">
 
-                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#navbarNav2" aria-controls="navbarNav2" aria-expanded="false"
-                                aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
                             <div class="collapse navbar-collapse" id="navbarNav2">
                                 <ul class="navbar-nav ms-auto d-flex align-items-center" style="gap: 20px;">
                                     <li class="nav-item">
@@ -48,6 +43,12 @@
                                     </li>
                                 </ul>
                             </div>
+                            
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#navbarNav2" aria-controls="navbarNav2" aria-expanded="false"
+                                aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
                         </div>
                     </nav>
                 </div>
@@ -73,9 +74,11 @@
                         <p1>Welcome to the <br><span style="font-size: 55px; color: aquamarine;">Literature
                             </span><span style="font-size: 55px; color: tomato;"> Carnival!</span> </p1><br><br>
                         <p2 style="color: burlywood; font-size: 20px;">The most fun carnival event ever!!!</p2><br><br>
-                        <a href="registration.html"><button class="register">Register NOW
-                            </button></a>&nbsp;&nbsp;&nbsp;&nbsp;
-                        <a class="cta-secondary text-decoration-none" href="events.html">Explore Events</a><br>
+                        <a href="registration.html" class="mb-5 mb-sm-0">
+                            <button class="register">Register NOW
+                            </button>
+                        </a>&nbsp;&nbsp;&nbsp;&nbsp;
+                        <a class="cta-secondary text-decoration-none mt-5 mt-sm-0" href="events.html">Explore Events</a><br>
 
                         <p class="date-pill text-center mt-2">15 Dec - 17 Dec 2025 || Port Harcourt, Nigeria</p>
 
