made more changes on home page

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <p class="display-3">Welcome to the <br>
                             <span style="font-size: 55px; color: aquamarine;">Literature
                             </span><span style="font-size: 55px; color: tomato;"> Carnival!</span></p>
-                        <p style="color: burlywood;">The most fun carnival event ever!!!</p><br>
+                        <p style="color: burlywood;" class="fs-4">The most fun carnival event ever!!!</p><br>
                             <a href="registration.html"  class="text-center d-block d-sm-inline register text-decoration-none">register now</a>
                             &nbsp;
                             <a href="events.html" class="text-center d-block d-sm-inline cta-secondary text-decoration-none">explore events</a>
@@ -98,7 +98,7 @@
                                     </div>
 
                                      <div class="countdown-item fw-bolder text-center">
-                                        <span class="number item">20</span> <br/>
+                                        <span class="number item h3">20</span> <br/>
                                         <span class="label item">hours</span>
                                     </div>
 
