--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                                         </li>
                                         <li>
                                             <i class="fas fa-envelope"></i>
-                                            info@literaturecarnival.ng
+                                            info@literaturecarnival.com
                                         </li>
                                         <li>
                                             <i class="fas fa-phone"></i>
@@ -450,7 +450,7 @@
                             <div class="footer-bottom">
                                 <div class="row align-items-center">
                                     <div class="col-md-12">
-                                        <p class="copyright">© 2025 Nigerian Literature Carnival. All rights reserved.
+                                        <p class="copyright">© 2025 Literature Carnival. All rights reserved.
                                         </p>
                                     </div>
                                 </div>
