--- a/registration.html
+++ b/registration.html
@@ -1,15 +1,207 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="fontawesome/fontawesome-free-6.7.2-web/css/all.min.css">
-    <link rel="stylesheet" href="fontawesome/fontawesome-free-6.7.2-web/css/fontawesome.min.css ">
-    <link rel="stylesheet" href="bootstrap-5.3.8-dist/css/bootstrap.min.css">
-    <title>Registration</title>
+    <link rel="stylesheet" href="resources/fontawesome/fontawesome-free-6.7.2-web/css/all.min.css">
+    <link rel="stylesheet" href="resources/fontawesome/fontawesome-free-6.7.2-web/css/fontawesome.min.css">
+    <link rel="stylesheet" href="resources/bootstrap-5.3.8-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="shortcut icon" href="images/litcar-icon.png" type="image/x-icon">
+    <title>Registration - Literature Carnival</title>
 </head>
+
 <body>
-    
+    <!-- Navigation -->
+    <div class="container-fluid stickynav sticky-top shadow-sm">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-11 navigation">
+                    <nav class="navbar navbar-expand-lg navbar-dark" style="border-radius: 10px;">
+                        <div class="container-fluid mt-2 position-relative">
+                            <a href="#" class="navbar-brand">
+                            <img src="images/literaturecarnival-logo.png" width="180" class="img-fluid" alt="Literature Carnival">
+                           </a>
+                            <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#navbarNav2" aria-controls="navbarNav2" aria-expanded="false"
+                                aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            
+                            <div class="collapse navbar-collapse justify-content-center" id="navbarNav2">
+                                <ul class="navbar-nav d-flex align-items-center" style="gap: 20px;">
+                                    <li class="nav-item">
+                                        <a href="index.html" class="btn nav-btn">Home</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="events.html" class="btn nav-btn">Events</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="registration.html" class="btn nav-btn nav-btn-home" 
+                                            aria-current="page">Registration</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Registration Content -->
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-12 text-center mb-5">
+                <h1 class="celebration-title">Choose Your Registration Type</h1>
+                <p class="text-white fs-5 mt-3">Join us at Africa's largest literary celebration!</p>
+            </div>
+        </div>
+
+        <div class="row justify-content-center">
+            <!-- School Registration Card -->
+            <div class="col-md-5 mb-4">
+                <div class="feature-card h-100 rounded-4 shadow-lg text-center p-4 registration-card" style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#schoolModal">
+                    <i class="fas fa-school fa-4x mb-3" style="color: var(--accent-color);"></i>
+                    <h3 class="mt-3 fw-bold">School Registration</h3>
+                    <p class="mt-3">Register your school for group participation. Special rates and programs available for educational institutions.</p>
+                    <div class="mt-4">
+                        <span class="btn register">Register School →</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Individual Registration Card -->
+            <div class="col-md-5 mb-4">
+                <div class="feature-card h-100 rounded-4 shadow-lg text-center p-4 registration-card" style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#individualModal">
+                    <i class="fas fa-user fa-4x mb-3" style="color: var(--accent-color);"></i>
+                    <h3 class="mt-3 fw-bold">Individual Registration</h3>
+                    <p class="mt-3">Register as an individual participant. Join us for an unforgettable literary experience.</p>
+                    <div class="mt-4">
+                        <span class="btn register">Register Individual →</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- School Registration Modal -->
+        <div class="modal fade" id="schoolModal" tabindex="-1" aria-labelledby="schoolModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content bg-dark">
+                    <div class="modal-header border-bottom border-secondary">
+                        <h5 class="modal-title text-white" id="schoolModalLabel">School Registration</h5>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body text-center text-white py-4">
+                        <i class="fas fa-school fa-3x mb-3" style="color: var(--accent-color);"></i>
+                        <h4 class="mb-3">Ready to Register Your School?</h4>
+                        <p class="mb-4">You'll be redirected to our secure registration form where you can complete the registration process and upload any required documents.</p>
+                        <a href="https://forms.gle/wXaEs9oJj5DsXMJj8" target="_blank" class="btn register px-4 py-2">
+                            Proceed to Registration
+                            <i class="fas fa-external-link-alt ms-2"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Individual Registration Modal -->
+        <div class="modal fade" id="individualModal" tabindex="-1" aria-labelledby="individualModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content bg-dark">
+                    <div class="modal-header border-bottom border-secondary">
+                        <h5 class="modal-title text-white" id="individualModalLabel">Individual Registration</h5>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body text-center text-white py-4">
+                        <i class="fas fa-user fa-3x mb-3" style="color: var(--accent-color);"></i>
+                        <h4 class="mb-3">Ready to Register?</h4>
+                        <p class="mb-4">You'll be redirected to our secure registration form where you can complete your registration process.</p>
+                        <a href="https://forms.gle/6gQw54PFo3qhSBiWA" target="_blank" class="btn register px-4 py-2">
+                            Proceed to Registration
+                            <i class="fas fa-external-link-alt ms-2"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Additional Information -->
+
+        <!-- Additional Information -->
+        <div class="row justify-content-center mt-4">
+            <div class="col-md-10">
+                <div class="celebration-wrapper text-center">
+                    <h3 class="mb-4" style="color: var(--accent-color);">Important Information</h3>
+                    <ul class="list-unstyled text-white">
+                        <li class="mb-3"><i class="fas fa-info-circle me-2"></i> Early bird registration closes on November 30, 2025</li>
+                        <li class="mb-3"><i class="fas fa-clock me-2"></i> Registration deadline: December 10, 2025</li>
+                        <li class="mb-3"><i class="fas fa-envelope me-2"></i> For inquiries: info@literaturecarnival.ng</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <div class="container-fluid mt-5">
+        <div class="row">
+            <div class="col-sm-12">
+                <footer class="modern-footer">
+                    <div class="container">
+                        <div class="row gy-4">
+                            <div class="col-lg-4 col-md-6">
+                                <h4 class="footer-heading">About the Carnival</h4>
+                                <p class="footer-about">Nigeria's premier literary event bringing together authors,
+                                    publishers, and book lovers for an unforgettable celebration of African
+                                    literature.</p>
+                            </div>
+                            <div class="col-lg-2 col-md-6">
+                                <h4 class="footer-heading">Quick Links</h4>
+                                <ul class="footer-links">
+                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="events.html">Events</a></li>
+                                    <li><a href="registration.html">Registration</a></li>
+                                </ul>
+                            </div>
+                            <div class="col-lg-3 col-md-6">
+                                <h4 class="footer-heading">Contact Us</h4>
+                                <ul class="footer-contact">
+                                    <li><i class="fas fa-map-marker-alt"></i> Port Harcourt, Nigeria</li>
+                                    <li><i class="fas fa-envelope"></i> info@literaturecarnival.com</li>
+                                    <li><i class="fas fa-phone"></i> +234 XXX XXX XXXX</li>
+                                </ul>
+                            </div>
+                            <div class="col-lg-3 col-md-6">
+                                <h4 class="footer-heading">Connect With Us</h4>
+                                <div class="footer-social">
+                                    <a href="#" class="social-btn"><i class="fab fa-facebook-f"></i></a>
+                                    <a href="#" class="social-btn"><i class="fab fa-instagram"></i></a>
+                                    <a href="#" class="social-btn"><i class="fab fa-twitter"></i></a>
+                                    <a href="#" class="social-btn"><i class="fab fa-whatsapp"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="footer-bottom">
+                            <div class="row align-items-center">
+                                <div class="col-md-12">
+                                    <p class="copyright">© 2025  Literature Carnival. All rights reserved.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </footer>
+            </div>
+        </div>
+    </div>
+
+    <script src="resources/bootstrap-5.3.8-dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
