modified important information on registration page

--- a/registration.html
+++ b/registration.html
@@ -140,9 +140,9 @@
                 <div class="celebration-wrapper text-center">
                     <h3 class="mb-4" style="color: var(--accent-color);">Important Information</h3>
                     <ul class="list-unstyled text-white">
-                        <li class="mb-3"><i class="fas fa-info-circle me-2"></i> Early bird registration closes on November 30, 2025</li>
-                        <li class="mb-3"><i class="fas fa-clock me-2"></i> Registration deadline: December 10, 2025</li>
-                        <li class="mb-3"><i class="fas fa-envelope me-2"></i> For inquiries: info@literaturecarnival.ng</li>
+                        <li class="mb-3"><i class="fas fa-info-circle me-2"></i> Early bird registration closes on January 5, 2026</li>
+                        <li class="mb-3"><i class="fas fa-clock me-2"></i> Registration deadline: February 5, 2026</li>
+                        <li class="mb-3"><i class="fas fa-envelope me-2"></i> For inquiries: info@literaturecarnival.com</li>
                     </ul>
                 </div>
             </div>
