--- a/registration.html
+++ b/registration.html
@@ -174,7 +174,10 @@
                                 <h4 class="footer-heading">Contact Us</h4>
                                 <ul class="footer-contact">
                                     <li><i class="fas fa-map-marker-alt"></i> Port Harcourt, Nigeria</li>
-                                    <li><i class="fas fa-envelope"></i> info@literaturecarnival.com</li>
+                                   <li>
+                                            <i class="fas fa-envelope"></i>
+                                            <a href="" class="text-decoration-none "> info@literaturecarnival.com</a>
+                                        </li>
                                     <li><i class="fas fa-phone"></i> +234 XXX XXX XXXX</li>
                                 </ul>
                             </div>
